--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="bg-video"></div>
 
     <header class="cs-header">
-        <div class="logo">CS <span class="accent">TRADE</span></div>
+        <div class="logo">AXE <span class="accent"></span></div>
         <nav class="cs-nav">
             <a href="#store">Магазин</a>
             <a href="#community">Сообщество</a>
